# Atom

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  appveyor.yml  atom-scm-1.rockspec  default.nix  format.sh  shell.nix
.github/workflows/: arch64.yml  linux.yml  workflow.yml
